# MoE-PEFT

./: README.md  launch.py  pyproject.toml  requirements.txt
misc/: install-extra-linux.sh
moe_peft/: evaluator.py  generator.py  model.py  tokenizer.py  trainer.py
moe_peft/adapters/mixlora/: config.py  model.py
moe_peft/common/: __init__.py  abstracts.py  attention.py  config.py  lora_linear.py  moe_utils.py  rope.py
moe_peft/models/: __init__.py  modeling_gemma2.py  modeling_llama.py  modeling_mistral.py  modeling_phi.py  modeling_phi3.py  modeling_qwen.py  modeling_qwen2.py
moe_peft/tasks/: qa_tasks.py
tests/: peft_generation.py  test_alignment_flash_attn.py  test_alignment_gemma2_eager.py  test_alignment_gemma_phi.py  test_alignment_llama_qwen2.py  test_alignment_mistral_phi3.py  test_entropy_functions.py  test_training_minimal.py
tests/chatglm/: configuration_chatglm.py  modeling_chatglm.py
