[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "moe_peft"
version = "2.0.3"
description = "An Efficient LLM Fine-Tuning Factory Optimized for MoE PEFT"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch==2.9.1",
    "datasets",
    "evaluate",
    "transformers==4.57.3",
    "sentencepiece",
    "huggingface_hub",
    "packaging",
]

[project.urls]
"Homepage" = "https://github.com/TUDB-Labs/MoE-PEFT"
"Bug Tracker" = "https://github.com/TUDB-Labs/MoE-PEFT/issues"

[tool.setuptools.packages.find]
include = ["moe_peft*"]
